--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-server.port=8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/newBank
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:bank
+spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
-
-
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
